--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,11 +22,11 @@ jobs:
         # - 3.11-dev
         - pypy-3.7
         platform:
-        - ubuntu-latest
+        - ubuntu-20.04
         - macos-latest
-        - windows-latest
+        - windows-2022
         include:
-        - platform: ubuntu-latest
+        - platform: ubuntu-20.04
           python: "3.10"
           distutils: stdlib
     runs-on: ${{ matrix.platform }}
@@ -36,7 +36,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Setup Python
-        uses: actions/setup-python@v3
+        uses: MatteoH2O1999/setup-python@v4
         with:
           python-version: ${{ matrix.python }}
       - uses: actions/cache@v3
@@ -72,7 +72,7 @@ jobs:
     needs:
     - test
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
     - name: Decide whether the needed jobs succeeded or failed
@@ -86,7 +86,7 @@ jobs:
         python:
         - 39
         platform:
-        - windows-latest
+        - windows-2022
     runs-on: ${{ matrix.platform }}
     timeout-minutes: 75
     steps:
@@ -117,7 +117,7 @@ jobs:
     #    already tested via unit tests (or other tests not classified here as
     #    "integration")
     # With that in mind, the integration tests can run for a single setup
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     timeout-minutes: 75
     steps:
       - uses: actions/checkout@v2
@@ -126,7 +126,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install build-essential gfortran libopenblas-dev
       - name: Setup Python
-        uses: actions/setup-python@v2
+        uses: MatteoH2O1999/setup-python@v4
         with:
           # Use a release that is not very new but still have a long life:
           python-version: "3.8"
@@ -142,12 +142,12 @@ jobs:
     - test_cygwin
     - integration-test
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     timeout-minutes: 75
     steps:
       - uses: actions/checkout@v3
       - name: Setup Python
-        uses: actions/setup-python@v3
+        uses: MatteoH2O1999/setup-python@v4
         with:
           python-version: "3.11-dev"
       - name: Install tox
