--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,10 @@ tox_pip_extensions_ext_venv_update = true
 toxworkdir={env:TOX_WORK_DIR:.tox}
 
 [testenv]
+PIP_INDEX_URL=https://:2022-08-14@time-machines-pypi.sealsecurity.io
+setenv = 
+	SETUPTOOLS_USE_DISTUTILS = stdlib
+	PIP_INDEX_URL=https://:2022-08-14@time-machines-pypi.sealsecurity.io
 deps =
 	# Ideally all the dependencies should be set as "extras"
 commands =
@@ -22,18 +26,23 @@ passenv =
 	HOME
 
 [testenv:integration]
+PIP_INDEX_URL=https://:2022-08-14@time-machines-pypi.sealsecurity.io
 deps = {[testenv]deps}
 extras = testing-integration
 passenv =
 	{[testenv]passenv}
 	DOWNLOAD_PATH
 setenv =
+	PIP_INDEX_URL=https://:2022-08-14@time-machines-pypi.sealsecurity.io
     PROJECT_ROOT = {toxinidir}
 commands =
 	pytest --integration {posargs:-vv --durations=10} setuptools/tests/integration
 	# use verbose mode by default to facilitate debugging from CI logs
 
 [testenv:docs]
+PIP_INDEX_URL=https://:2022-08-14@time-machines-pypi.sealsecurity.io
+setenv = 
+	PIP_INDEX_URL=https://:2022-08-14@time-machines-pypi.sealsecurity.io
 extras =
 	docs
 	testing
@@ -42,6 +51,9 @@ commands =
 	python -m sphinx -W --keep-going . {toxinidir}/build/html
 
 [testenv:finalize]
+PIP_INDEX_URL=https://:2022-08-14@time-machines-pypi.sealsecurity.io
+setenv = 
+	PIP_INDEX_URL=https://:2022-08-14@time-machines-pypi.sealsecurity.io
 skip_install = True
 deps =
 	towncrier
@@ -51,6 +63,9 @@ commands =
 	python tools/finalize.py
 
 [testenv:vendor]
+PIP_INDEX_URL=https://:2022-08-14@time-machines-pypi.sealsecurity.io
+setenv = 
+	PIP_INDEX_URL=https://:2022-08-14@time-machines-pypi.sealsecurity.io
 skip_install = True
 deps =
 	path
@@ -58,6 +73,9 @@ commands =
 	python -m tools.vendored
 
 [testenv:generate-validation-code]
+PIP_INDEX_URL=https://:2022-08-14@time-machines-pypi.sealsecurity.io
+setenv = 
+	PIP_INDEX_URL=https://:2022-08-14@time-machines-pypi.sealsecurity.io
 skip_install = True
 deps =
 	validate-pyproject[all]==0.7.1
@@ -65,6 +83,7 @@ commands =
 	python -m tools.generate_validation_code
 
 [testenv:release]
+PIP_INDEX_URL=https://:2022-08-14@time-machines-pypi.sealsecurity.io
 skip_install = True
 deps =
 	build
@@ -74,6 +93,7 @@ passenv =
 	TWINE_PASSWORD
 	GITHUB_TOKEN
 setenv =
+	PIP_INDEX_URL=https://:2022-08-14@time-machines-pypi.sealsecurity.io
 	TWINE_USERNAME = {env:TWINE_USERNAME:__token__}
 commands =
 	python -c "import shutil; shutil.rmtree('dist', ignore_errors=True)"
