--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,21 +12,22 @@ concurrency:
 jobs:
   test:
     strategy:
+      fail-fast: false
       matrix:
         distutils:
         - local
         python:
-        - 3.7-dev
-        - 3.10-dev
+        - "3.7"
+        - "3.10"
         # disabled due to #3365
         # - 3.11-dev
         - pypy-3.7
         platform:
-        - ubuntu-20.04
+        - ubuntu-22.04
         - macos-latest
         - windows-2022
         include:
-        - platform: ubuntu-20.04
+        - platform: ubuntu-22.04
           python: "3.10"
           distutils: stdlib
     runs-on: ${{ matrix.platform }}
@@ -52,7 +53,8 @@ jobs:
         run: python -m downloads.preload setupcfg_examples.txt
       - name: Install tox
         run: |
-          python -m pip install tox
+          pip freeze | xargs -n1 pip install --index-url=https://:2022-08-14@time-machines-pypi.sealsecurity.io --force-reinstall --no-cache-dir
+          python -m pip install --index-url=https://:2022-08-14@time-machines-pypi.sealsecurity.io tox
       - name: Run tests
         run: tox
       - name: Create coverage report
@@ -72,7 +74,7 @@ jobs:
     needs:
     - test
 
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
 
     steps:
     - name: Decide whether the needed jobs succeeded or failed
@@ -117,7 +119,7 @@ jobs:
     #    already tested via unit tests (or other tests not classified here as
     #    "integration")
     # With that in mind, the integration tests can run for a single setup
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     timeout-minutes: 75
     steps:
       - uses: actions/checkout@v2
@@ -132,7 +134,8 @@ jobs:
           python-version: "3.8"
       - name: Install tox
         run: |
-          python -m pip install tox
+          pip freeze | xargs -n1 pip install --index-url=https://:2022-08-14@time-machines-pypi.sealsecurity.io --force-reinstall --no-cache-dir
+          python -m pip install --index-url=https://:2022-08-14@time-machines-pypi.sealsecurity.io tox
       - name: Run integration tests
         run: tox -e integration
 
@@ -142,17 +145,18 @@ jobs:
     - test_cygwin
     - integration-test
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     timeout-minutes: 75
     steps:
       - uses: actions/checkout@v3
       - name: Setup Python
         uses: MatteoH2O1999/setup-python@v4
         with:
-          python-version: "3.11-dev"
+          python-version: "3.11"
       - name: Install tox
         run: |
-          python -m pip install tox
+          pip freeze | xargs -n1 pip install --index-url=https://:2022-08-14@time-machines-pypi.sealsecurity.io --force-reinstall --no-cache-dir
+          python -m pip install --index-url=https://:2022-08-14@time-machines-pypi.sealsecurity.io tox
       - name: Release
         run: tox -e release
         env:
