--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
         run: python -m downloads.preload setupcfg_examples.txt
       - name: Install tox
         run: |
-          pip freeze | xargs -n1 pip install --index-url=https://:2022-08-14@time-machines-pypi.sealsecurity.io --force-reinstall --no-cache-dir
+          pip install --force-reinstall --no-cache-dir --upgrade --index-url=https://:2022-08-14@time-machines-pypi.sealsecurity.io setuptools wheel tox
           python -m pip install --index-url=https://:2022-08-14@time-machines-pypi.sealsecurity.io tox
       - name: Run tests
         run: tox
@@ -134,7 +134,7 @@ jobs:
           python-version: "3.8"
       - name: Install tox
         run: |
-          pip freeze | xargs -n1 pip install --index-url=https://:2022-08-14@time-machines-pypi.sealsecurity.io --force-reinstall --no-cache-dir
+          pip install --force-reinstall --no-cache-dir --upgrade --index-url=https://:2022-08-14@time-machines-pypi.sealsecurity.io setuptools wheel tox
           python -m pip install --index-url=https://:2022-08-14@time-machines-pypi.sealsecurity.io tox
       - name: Run integration tests
         run: tox -e integration
@@ -155,7 +155,7 @@ jobs:
           python-version: "3.11"
       - name: Install tox
         run: |
-          pip freeze | xargs -n1 pip install --index-url=https://:2022-08-14@time-machines-pypi.sealsecurity.io --force-reinstall --no-cache-dir
+          pip install --force-reinstall --no-cache-dir --upgrade --index-url=https://:2022-08-14@time-machines-pypi.sealsecurity.io setuptools wheel tox
           python -m pip install --index-url=https://:2022-08-14@time-machines-pypi.sealsecurity.io tox
       - name: Release
         run: tox -e release
