--- a/tox.ini
+++ b/tox.ini
@@ -6,12 +6,13 @@ tox_pip_extensions_ext_venv_update = true
 toxworkdir={env:TOX_WORK_DIR:.tox}
 
 [testenv]
-PIP_INDEX_URL=https://:2022-08-14@time-machines-pypi.sealsecurity.io
 setenv = 
 	SETUPTOOLS_USE_DISTUTILS = stdlib
 	PIP_INDEX_URL=https://:2022-08-14@time-machines-pypi.sealsecurity.io
 deps =
 	# Ideally all the dependencies should be set as "extras"
+commands_pre =
+    bash -c "unset PIP_INDEX_URL; unset PIP_EXTRA_INDEX_URL; export PIP_NO_INDEX=true"
 commands =
 	pytest {posargs}
 usedevelop = True
