--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ author_email = distutils-sig@python.org
 description = Easily download, build, install, upgrade, and uninstall Python packages
 long_description = file:README.rst
 url = https://github.com/pypa/setuptools
-classifiers =
+classifiers = 
 	Development Status :: 5 - Production/Stable
 	Intended Audience :: Developers
 	License :: OSI Approved :: MIT License
@@ -17,18 +17,16 @@ classifiers =
 	Topic :: System :: Systems Administration
 	Topic :: Utilities
 keywords = CPAN PyPI distutils eggs package management
-project_urls =
+project_urls = 
 	Documentation = https://setuptools.pypa.io/
 
 [options]
 packages = find_namespace:
-# disabled as it causes tests to be included #2505
-# include_package_data = true
 python_requires = >=3.7
-install_requires =
+install_requires = 
 
 [options.packages.find]
-exclude =
+exclude = 
 	build*
 	dist*
 	docs*
@@ -38,26 +36,20 @@ exclude =
 	tools*
 
 [options.extras_require]
-testing =
-	# upstream
+testing = 
 	pytest >= 6
 	pytest-checkdocs >= 2.4
 	pytest-flake8
-	# workaround for tholo/pytest-flake8#87
 	flake8 < 5
 	pytest-black >= 0.3.7; \
-		# workaround for jaraco/skeleton#22
-		python_implementation != "PyPy"
+	python_implementation != "PyPy"
 	pytest-cov; \
-		# coverage seems to make PyPy extremely slow
-		python_implementation != "PyPy"
+	python_implementation != "PyPy"
 	pytest-mypy >= 0.9.1; \
-		# workaround for jaraco/skeleton#22
-		python_implementation != "PyPy"
+	python_implementation != "PyPy"
 	pytest-enabler >= 1.3
 	pytest-perf
-
-	# local
+	
 	mock
 	flake8-2020
 	virtualenv>=13.0.0
@@ -71,8 +63,7 @@ testing =
 	pip_run>=8.8
 	ini2toml[lite]>=0.9
 	tomli-w>=1.0.0
-
-testing-integration =
+testing-integration = 
 	pytest
 	pytest-xdist
 	pytest-enabler
@@ -83,30 +74,25 @@ testing-integration =
 	jaraco.envs>=2.2
 	build[virtualenv]
 	filelock>=3.4.0
-
-docs =
-	# upstream
+docs = 
 	sphinx
 	jaraco.packaging >= 9
 	rst.linker >= 1.9
 	jaraco.tidelift >= 1.4
 	sphinx-notfound-page == 0.8.3
 	sphinx-hoverxref < 2
-
-	# local
+	
 	pygments-github-lexers==0.0.5
 	sphinx-favicon
 	sphinx-inline-tabs
 	sphinx-reredirects
 	sphinxcontrib-towncrier
 	furo
-
-ssl =
-
-certs =
+ssl = 
+certs = 
 
 [options.entry_points]
-distutils.commands =
+distutils.commands = 
 	alias = setuptools.command.alias:alias
 	bdist_egg = setuptools.command.bdist_egg:bdist_egg
 	bdist_rpm = setuptools.command.bdist_rpm:bdist_rpm
@@ -129,10 +115,10 @@ distutils.commands =
 	setopt = setuptools.command.setopt:setopt
 	test = setuptools.command.test:test
 	upload_docs = setuptools.command.upload_docs:upload_docs
-setuptools.finalize_distribution_options =
+setuptools.finalize_distribution_options = 
 	parent_finalize = setuptools.dist:_Distribution.finalize_options
 	keywords = setuptools.dist:Distribution._finalize_setup_keywords
-distutils.setup_keywords =
+distutils.setup_keywords = 
 	eager_resources = setuptools.dist:assert_string_list
 	namespace_packages = setuptools.dist:check_nsp
 	extras_require = setuptools.dist:check_extras
@@ -151,7 +137,7 @@ distutils.setup_keywords =
 	test_loader = setuptools.dist:check_importable
 	test_runner = setuptools.dist:check_importable
 	use_2to3 = setuptools.dist:invalid_unless_false
-egg_info.writers =
+egg_info.writers = 
 	PKG-INFO = setuptools.command.egg_info:write_pkg_info
 	requires.txt = setuptools.command.egg_info:write_requirements
 	entry_points.txt = setuptools.command.egg_info:write_entries
@@ -162,8 +148,9 @@ egg_info.writers =
 	dependency_links.txt = setuptools.command.egg_info:overwrite_arg
 
 [egg_info]
-tag_build = .post
-tag_date = 1
+tag_build = 
+tag_date = 0
 
 [sdist]
 formats = zip
+
